--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -354,12 +354,17 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+.advantages-item.advantages-description {
+  color: #ffffff;
+}
+
 .advantages-description {
   font-weight: 400;
   font-size: 18px;
   line-height: 21px;
   text-align: center;
   margin: 0;
+  color: #333333;
 }
 
 .advantages-item.advantages-item-big {
@@ -465,7 +470,7 @@ body {
 
 .infrastructure-item {
   width: 400px;
-  height: 385px;
+  min-height: 385px;
   box-sizing: border-box;
   padding: 185px 85px 81px;
   background-position: center 84px;
@@ -641,7 +646,7 @@ body {
 }
 
 .footer-social-list {
-  width: 235px;
+  max-width: 235px;
   display: flex;
   margin: 0;
   padding: 0;
@@ -679,6 +684,7 @@ body {
 }
 
 .footer-phone {
+  max-width: 720px;
   font-weight: 400;
   font-size: 40px;
   line-height: 40px;
@@ -686,7 +692,6 @@ body {
   text-align: center;
   color: #000000;
   text-decoration-line: none;
-  margin-right: 92px;
 }
 
 .footer-phone:hover {
@@ -728,7 +733,6 @@ body {
   margin: auto;
 }
 
-
 /* модальное окно */
 .modal-container {
   position: fixed;
@@ -739,7 +743,6 @@ body {
   height: 100%;
   background-color: rgba(242, 242, 242, 0.8);
 }
-
 
 .modal {
   position: relative;
@@ -948,6 +951,10 @@ body {
   margin: 0;
 }
 
+.search-input-guests[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .form-label-icon {
   display: flex;
   align-items: center;
@@ -1047,6 +1054,10 @@ body {
 .search-form-button:active {
   color: rgba(255, 255, 255, 0.3);
   background-color: #68a2ca;
+}
+
+.search-form-button:disabled {
+  background-color: #e5e5e5;
 }
 
 /* Стилизация каталога*/
@@ -1395,6 +1406,10 @@ body {
   background-color: #82b3d3;
 }
 
+.catalog-filter-submit:disabled {
+  background-color: #e5e5e5;
+}
+
 .catalog-filter-reset {
   font-family: inherit;
   font-weight: 700;
@@ -1460,6 +1475,7 @@ body {
   font-size: 18px;
   line-height: 21px;
   color: #333333;
+  background-color: #ffffff;
   width: 292px;
   height: 49px;
   padding: 12px 16px;
@@ -1541,6 +1557,7 @@ body {
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto repeat(3, min-content);
   column-gap: 20px;
   row-gap: 16px;
   border: 1px solid #e6e6e6;
@@ -1713,7 +1730,7 @@ body {
 .catalog-hotels-card-stars {
   height: 17px;
   margin: 0;
-  background-image: url("../images/star.svg");
+  background-image: url("../images/icon/star.svg");
   background-repeat: space no-repeat;
   background-position: center;
   margin-top: 10px;
