--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,7 +231,6 @@ body {
   font-size: 16px;
   font-weight: 700;
   line-height: 20px;
-  width: 160px;
   font-family: inherit;
   padding: 8px 34px;
   color: #ffffff;
@@ -242,6 +241,8 @@ body {
   cursor: pointer;
   margin-left: 32px;
   text-decoration: none;
+  display: block;
+  box-sizing: border-box;
 }
 
 .header-button:hover {
