Исправляет кнопку в шапке для защиты

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -232,6 +232,7 @@ body {
   font-weight: 700;
   line-height: 20px;
   font-family: inherit;
+  width: 160px;
   padding: 8px 34px;
   color: #ffffff;
   background-color: #756157;
